fix header spacing

--- a/src/scss/lanyon.scss
+++ b/src/scss/lanyon.scss
@@ -259,7 +259,7 @@ h1,h2, h3 {
   font-size: 1.5em;
   line-height: 1.3;
   color: #464F59;
-  letter-spacing: -.050rem;
+  letter-spacing: 1.2px;
 }
 
  h4, h5, h6 {
